<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightblue900">
    <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_intro2_title"
        android:textColor="@color/white"
        android:textSize="26sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|end"
                android:text="@string/text_intro2_body11"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|start"
                android:text="@string/text_intro2_body12"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|end"
                android:text="@string/text_intro2_body21"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="start"
                android:text="@string/text_intro2_body22"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|end"
                android:text="@string/text_intro2_body31"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|start"
                android:text="@string/text_intro2_body32"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|end"
                android:text="@string/text_intro2_body41"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02" />
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="center|start"
                android:text="@string/text_intro2_body42"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/img_intro2"
        android:contentDescription="@string/img_content_des"
        android:visibility="visible"/>

</LinearLayout>
