<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue900">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_intro3_title"
            android:textSize="26sp"
            android:textColor="@color/white"/>

        <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_intro3_body"
            android:textColor="@color/white"/>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="280dp"
            android:layout_height="380dp"
            android:src="@drawable/img_intro3"
            android:background="@color/lightblue900"
            android:backgroundTint="@color/lightblue900"
            android:backgroundTintMode="src_over"
            android:contentDescription="@string/img_content_des"/>
    </LinearLayout>


</RelativeLayout>