<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page.side_menu.care.CustomerCare">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/newlightblue"
        app:layout_scrollFlags="scroll|enterAlways"
        app:titleTextColor="#FFFFFF"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"/>

    <!--PHONE LAYOUT-->
    <RelativeLayout
        android:id="@+id/care_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_care_phone"
            android:contentDescription="@string/img_content_des"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_phone"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/ic_phone"
            android:layout_marginStart="10dp">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_phone"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_phone_number"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/grey400"/>

    <!--MESSAGE LAYOUT-->
    <RelativeLayout
        android:id="@+id/care_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/ic_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_care_sms"
            android:contentDescription="@string/img_content_des"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_message"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/ic_message"
            android:layout_marginStart="10dp">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_message"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_message_number"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/grey400"/>

    <!--WHATSAPP LAYOUT-->
    <RelativeLayout
        android:id="@+id/care_whatsApp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/ic_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_care_whatsapp"
            android:contentDescription="@string/img_content_des"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_whatsapp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/ic_whatsapp"
            android:layout_marginStart="10dp">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_whatsapp"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_whatsapp_number"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/grey400"/>

    <RelativeLayout
        android:id="@+id/care_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_care_email"
            android:contentDescription="@string/img_content_des"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_email"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/ic_email"
            android:layout_marginStart="10dp">
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_email"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_care_email_detail"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/grey400"/>
    <com.example.tomz.electroniccity.utils.font.CustomTextViewLatoFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/text_care_waktu_operasional"
        android:textColor="@color/black"
        android:textSize="14sp"/>

</LinearLayout>